# agent_jd

./: .env.example  .gitignore  README.md  compose.yaml
agent-jd-python/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-embedding.txt  requirements.txt
agent-jd-python/app/: main.py
agent-jd-python/app/agents/: evaluation.py  graphs.py  nodes.py  router.py  schemas.py  state.py
agent-jd-python/app/api/: deps.py
agent-jd-python/app/core/: errors.py  logger.py  metrics.py  security.py  settings.py  tracing.py
agent-jd-python/app/infra/: redis_client.py
agent-jd-python/app/llm/: base.py  dashscope_provider.py  factory.py  fake_provider.py  openai_provider.py
agent-jd-python/app/memory/: context_window.py  schema.py  session_store.py
agent-jd-python/app/prompts/: __init__.py  loader.py
agent-jd-python/app/rag/: bm25.py  embedder.py  embedding_api.py  evaluation.py  prompt_enhancer.py  retriever.py  schema.py  service.py  (+2 more)
agent-jd-python/eval/: README.md  agent_match_dataset.jsonl  heldout_knowledge.jsonl  heldout_rag_dataset.jsonl  rag_dataset.jsonl
agent-jd-python/reports/: evaluation.json  evaluation.md
agent-jd-python/scripts/: __init__.py  eval_agent.py  eval_rag.py  eval_suite.py  import_knowledge.py  rag_smoke.py
agent-jd-python/seed/: knowledge.jsonl
agent-jd-python/tests/: test_agent_evaluation.py  test_agent_validation.py  test_bm25.py  test_eval_suite.py  test_fake_llm.py  test_metrics.py  test_rag.py  test_rag_evaluation.py  test_session_context.py  test_tools.py
(+188 files in other folders)
