[project]
name = "agent-jd-python"
version = "0.1.0"
description = "FastAPI + LangGraph Agent service for AI job platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
src = ["app", "tests"]
